--- a/public/bookreviews/index.html
+++ b/public/bookreviews/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Book Reviews#All of my book reviews, these are adapted from my Goodreads. I intend to save them here, out of precaution, due to saving issues I&rsquo;ve had on Goodreads in the past.
-2023#For Whom The Bell Tolls
+2023#Everyman
+Kyoto-Dwelling: A Year of Brief Poems
+For Whom The Bell Tolls
 Stoner
 Sherlock Holmes: The Complete Novels and Stories, Volume I
 The Overcoat and Other Short Stories
 A Farewell to Arms
-The Forest
-New York Stories
-2022#Victory">
+The Forest">
 <meta name="theme-color" content="#FFFFFF">
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="Book Reviews" />
 <meta property="og:description" content="" />
@@ -23,7 +23,7 @@ New York Stories
   <link rel="alternate" hreflang="en-us" href="https://arshsiddiqui.pages.dev/fr/bookreviews/" title="Critiques des Livres">
 <link rel="stylesheet" href="/book.min.b3488045b94246c08cb956e8a82d99944a7cbd581bf976a700e281bbb73b1a07.css" integrity="sha256-s0iARblCRsCMuVboqC2ZlEp8vVgb&#43;XanAOKBu7c7Ggc=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.8473863bff0fe52ea71c0695e00c74c587283d8f10c55db33b31bb80893a0670.js" integrity="sha256-hHOGO/8P5S6nHAaV4Ax0xYcoPY8QxV2zOzG7gIk6BnA=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.ef513c802234d9661bf22ca9379bf00a796ff12691ed1bd1a3cb9ef055f7dba9.js" integrity="sha256-71E8gCI02WYb8iypN5vwCnlv8SaR7RvRo8ue8FX326k=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://arshsiddiqui.pages.dev/bookreviews/index.xml" title="Arsh Siddiqui" />
 <!--
 Made with Book Theme
@@ -178,6 +178,8 @@ precaution, due to saving issues I&rsquo;ve had on Goodreads in the past.</p>
   <a class="anchor" href="#2023">#</a>
 </h2>
 <hr>
+<p><a href="/bookreviews/everyman">Everyman</a></p>
+<p><a href="/bookreviews/kyoto_dwellings">Kyoto-Dwelling: A Year of Brief Poems</a></p>
 <p><a href="/bookreviews/forwhomthebelltolls">For Whom The Bell Tolls</a></p>
 <p><a href="/bookreviews/stoner">Stoner</a></p>
 <p><a href="/bookreviews/sherlockholmesvolume1">Sherlock Holmes: The Complete Novels and Stories, Volume I</a></p>
