--- a/public/fr/bookreviews/index.html
+++ b/public/fr/bookreviews/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Critiques des Livres#Toutes mes critiques des livres. Elles sont adaptés de mon Goodreads. Je voudrais les sauvegarder ici, par précaution, parce que j&rsquo;ai des problèmes de sauvegarde sur Goodreads.
-2023#Le Manteau et Autres Nouvelles
+2023#Everyman
+Habitation à Kyoto: Une année des brefs poèmes
+Le Manteau et Autres Nouvelles
 L&rsquo;Adieu aux Armes
 La Forêt des Rois">
 <meta name="theme-color" content="#FFFFFF">
@@ -18,7 +20,7 @@ La Forêt des Rois">
   <link rel="alternate" hreflang="en-us" href="https://arshsiddiqui.pages.dev/bookreviews/" title="Book Reviews">
 <link rel="stylesheet" href="/book.min.b3488045b94246c08cb956e8a82d99944a7cbd581bf976a700e281bbb73b1a07.css" integrity="sha256-s0iARblCRsCMuVboqC2ZlEp8vVgb&#43;XanAOKBu7c7Ggc=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/fr.search.min.7f303d7570ab404ec45d5da38525335a33c9a761705cd5482045fb54790ab021.js" integrity="sha256-fzA9dXCrQE7EXV2jhSUzWjPJp2FwXNVIIEX7VHkKsCE=" crossorigin="anonymous"></script>
+  <script defer src="/fr.search.min.d5f94bea93fa5235a46254d0c8bbe3c6abe437b90dbc4dda8bf0e8143d75e94b.js" integrity="sha256-1flL6pP6UjWkYlTQyLvjxqvkN7kNvE3ai/DoFD116Us=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://arshsiddiqui.pages.dev/fr/bookreviews/index.xml" title="Arsh Siddiqui" />
 <!--
 Made with Book Theme
@@ -169,6 +171,8 @@ ici, par précaution,  parce que j&rsquo;ai des problèmes de sauvegarde sur Goo
   <a class="anchor" href="#2023">#</a>
 </h2>
 <hr>
+<p><a href="/fr/bookreviews/everyman">Everyman</a></p>
+<p><a href="/fr/bookreviews/kyoto_dwellings/">Habitation à Kyoto: Une année des brefs poèmes</a></p>
 <p><a href="/fr/bookreviews/theovercoat/">Le Manteau et Autres Nouvelles</a></p>
 <p><a href="/fr/bookreviews/afarewelltoarms/">L&rsquo;Adieu aux Armes</a></p>
 <p><a href="/fr/bookreviews/theforest/">La Forêt des Rois</a></p>
